[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "hivemapper-python"
version = "0.4.5"
authors = [{ name="Hivemapper", email="hi@hivemapper.com" }]
description = "SDK for Hivemapper APIs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Hivemapper/hive-py"
Issues = "https://github.com/Hivemapper/hive-py/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["account*", "imagery*", "burst*", "util*", "README.md", "__init__.py", "requirements.txt", "test_feature.json", "test_feature_col.json"]
exclude = ["docs*", "tests*"]

